--- a/styles/main.css
+++ b/styles/main.css
@@ -59,11 +59,13 @@ html {
      cursor: pointer;
  }
  
-  
- .links-container .navbar-link:hover {
+.links-container .navbar-link:hover {
      color: rgb(233,50,117);
+}
+  
+.links-container .navbar-link:active {
+     background-color: white;
  }
- 
  
  
  @media (min-width: 640px) {
