--- a/styles/main.css
+++ b/styles/main.css
@@ -20,6 +20,11 @@ html {
      max-width: 64rem;
  }
  
+ .container.narrow {
+     max-width: 56rem;
+ }
+
+ 
  .navbar {
      position: relative;
      padding: 0.5rem;
